kubernetes/legacy/apps/stirling-pdf/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stirling-pdf
  namespace: apps
spec:
  parentRefs:
    - name: homeserver-gateway
      namespace: infra
  hostnames:
    - "stirling-pdf.k8s.local"
  rules:
    - backendRefs:
        - name: stirling-pdf
          port: 8080
